--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -1,27 +1,16 @@
+/*
+    Global
+    ==================================
+*/
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
         Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
 }
 
-.nav-container {
-    display: block;
-    padding: 25px;
-    max-width: 1300px;
-}
-
-.nav-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .nav {
-    display: flex;
     list-style: none;
     padding: 0;
-    flex-wrap: wrap;
-
 }
 
 .nav li {
@@ -44,56 +33,77 @@ body {
     text-decoration: underline;
 }
 
-
-/* Position and sizing of burger button */
-.bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 36px;
+.menu {
+    display: flex;
+    padding: 25px;
+    max-width: 1300px;
+    margin: 0 auto;
+    justify-content: space-between;
 }
 
-/* Color/shape of burger icon bars */
-.bm-burger-bars {
-    background: #373a47;
+.logo {
+    display: flex;
+    align-items: center;
 }
 
-/* Position and sizing of clickable cross button */
-.bm-cross-button {
-    height: 24px;
-    width: 24px;
+
+/*
+    Mobile
+    ==================================
+*/
+@media only screen and (max-width: 1024px) {
+    .menu-row {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .menu {
+        justify-content: flex-end;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .logo {
+        width: 100%;
+    }
+
+    .burger-menu .nav-container {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: -14rem;
+        width: 14rem;
+        background-color: white;
+        transition: transform 0.3s ease-out;
+        border: solid 1px;
+    }
+
+    .burger-menu.active .nav-container {
+        transform: translateX(14rem);
+    }
+
+    .burger-menu.active::after {
+        position: absolute;
+        width: calc(100% - 14rem);
+        height: 100%;
+        color: #FFF;
+        content: "";
+        background: rgba(0, 0, 0, .45);
+        right: 0;
+        top: 0;
+        transition: transform 0.3s ease-out;
+    }
 }
 
-/* Color/shape of close button cross */
-.bm-cross {
-    background: #bdc3c7;
-}
-
-/* General sidebar styles */
-.bm-menu {
-    background: #373a47;
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-}
-
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-    fill: #373a47;
-}
-
-/* Wrapper for item list */
-.bm-item-list {
-    color: #b8b7ad;
-    padding: 0.8em;
-}
-
-/* Individual item */
-.bm-item {
-    display: inline-block;
-}
-
-/* Styling of overlay */
-.bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
+/*
+    Desktop
+    ==================================
+*/
+@media only screen and (min-width: 1024px) {
+    .nav {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
