adding favicon and tab title

--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -90,7 +90,7 @@ body {
     }
 
     .burger-menu.active::after {
-        position: absolute;
+        position: fixed;
         width: calc(100% - 14rem);
         height: 100%;
         color: #FFF;
