--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -200,3 +200,11 @@ footer a:nth-of-type(3):hover {
         flex-direction: column;
     }
 }
+
+pre {
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+    border-radius: 0.3em;
+    background-color: rgb(40, 44, 52);
+}
