--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -1,3 +1,14 @@
 .portfolio__item:hover img {
     transform: scale(1.1);
 }
+
+/*
+    Mobile
+    ==================================
+*/
+@media only screen and (max-width: 767px) {
+    .portfolio__list ul {
+        grid-template-columns: 1fr !important;
+        margin: 0
+    }
+}
