--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -76,6 +76,11 @@
   float: right;
 }
 
+h2 {
+  font-family: 'Playfair Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /*
     Tablet
     ==================================
