--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,16 @@ body {
     min-height: 100%;
 }
 
+h1 {
+    font-family: 'Playfair Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h2 {
+    font-family: 'Playfair Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .main-content {
     display: flex;
     justify-content: center;
