table of content component and styles

--- a/codeBlock.css
+++ b/codeBlock.css
@@ -45,6 +45,7 @@ gatsby-highlight > code[class*='language-'],
   line-height: 1.5;
   tab-size: 4;
   hyphens: none;
+  float: left;
 }
 
 .line-number-style {
