--- a/codeBlock.css
+++ b/codeBlock.css
@@ -46,6 +46,7 @@ gatsby-highlight > code[class*='language-'],
   tab-size: 4;
   hyphens: none;
   float: left;
+  min-width: 100%;
 }
 
 .line-number-style {
